- Added support for namespaces. (Dmitry, Stas)
- Added support for Late Static Binding. (Dmitry, Etienne Kneuss)
- Added support for __callstatic() magic method. (Sara)
- Added support for dynamic access of static members using $foo::myFunc().
  (Etienne Kneuss)
- Added "compact" handler for Zend MM storage. (Dmitry)
- Added '+' and '*' specifiers to zend_parse_parameters(). (Andrei)

- Upgraded PCRE to version 7.4 (Nuno)

- Improved php.ini handling: (Jani)
  . Added ".htaccess" style user-defined php.ini files support for CGI/FastCGI
  . Added support for special [PATH=/opt/httpd/www.example.com/] sections
    All directives set in these sections will not be able to be overridden
    in user-defined ini-files or during runtime in the specified path
  . Added better error reporting for php.ini syntax errors
  . Allowed "ini-variables" to be used almost everywhere ini php.ini files
  . Allowed using alphanumeric/variable indexes in "array" ini options
  . Added 3rd optional parameter to parse_ini_file() to specify the scanning
    mode of INI_SCANNER_NORMAL or INI_SCANNER_RAW. In raw mode option values
    and section values are treated as-is
  . Fixed get_cfg_var() to be able to return "array" ini options
- Improved memory usage by moving constants to read only memory.
  (Dmitry, Pierre)
- Improved ext/soap to support element names in context of XMLShema's <any>.
  (Dmitry)
- Improved ext/openssl: (Dmitry)
  . Added support for OpenSSL digest functions
  . Added support for OpenSSL cipher functions
  . Added access to internal values of DSA, RSA and DH keys
- Improved and cleaned CGI code. FastCGI is now always enabled and can not be
  disabled. See sapi/cgi/CHANGES for more details. (Dmitry)

- Fixed possible crash in ext/soap because of uninitialized value (Zdash Urf)

- Fixed bug #42848 (Status: header incorrect under FastCGI). (Dmitry)
- Fixed bug #42773 (WSDL error causes HTTP 500 Response). (Dmitry)